[package]
name = 'kpron-node'
authors = ['Apron Network']
description = 'A new Cumulus FRAME-based Substrate node, ready for kpron.'
license = 'Unlicense'
version = '3.0.0'
homepage = 'https://apron.network'
repository = 'https://github.com/Apron-Network/kpron-parachain'
edition = '2018'
build = 'build.rs'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }

[[bin]]
name = 'kpron-node'

[features]
default = []
runtime-benchmarks = ['kpron-runtime/runtime-benchmarks']

[dependencies]
derive_more = '0.15.0'
log = '0.4.14'
codec = { package = 'parity-scale-codec', version = '2.0.0' }
structopt = '0.3.8'
serde = { version = '1.0.119', features = ['derive'] }
hex-literal = '0.2.1'
# RPC related Dependencies
jsonrpc-core = '15.1.0'

# Local Dependencies
kpron-runtime = { path = '../runtime' }

# Substrate Dependencies
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
frame-benchmarking-cli = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }

pallet-transaction-payment-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }

substrate-frame-rpc-system = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/substrate", branch = "master" }

## Substrate Client Dependencies
sc-basic-authorship = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sc-chain-spec = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sc-cli = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sc-client-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sc-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sc-executor = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sc-network = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sc-keystore = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sc-rpc = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sc-rpc-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sc-service = { git = 'https://github.com/paritytech/substrate.git', branch = "master", version = '0.9.0', features = ['wasmtime'] }
sc-telemetry = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sc-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sc-tracing = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }

## Substrate Primitive Dependencies
sp-api = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-blockchain = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-consensus = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-core = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-inherents = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-keystore = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-offchain = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-session = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-timestamp = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', branch = 'master' }

# Cumulus dependencies
cumulus-client-consensus-aura = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
cumulus-client-consensus-common = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
cumulus-client-collator = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
cumulus-client-cli = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
cumulus-client-network = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
cumulus-client-service = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }
cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus.git', branch = 'master' }

# Polkadot dependencies
polkadot-primitives = { git = 'https://github.com/paritytech/polkadot', branch = 'master'}
polkadot-service = { git = 'https://github.com/paritytech/polkadot', branch = 'master'}
polkadot-cli = { git = 'https://github.com/paritytech/polkadot', branch = 'master'}
polkadot-test-service = { git = 'https://github.com/paritytech/polkadot', branch = 'master'}
polkadot-parachain = { git = 'https://github.com/paritytech/polkadot', branch = 'master'}